testsuite/tests/properties/invalid_comparison/test.out
== foo.lkt ==
foo.lkt:12:62: error: Comparisons require the same type for both operands (got Int and BigInt)
12 |     @exported fun compare(lhs: Int, rhs: BigInt): Bool = lhs < rhs
   |                                                              ^


lkt_compile: Done
